tests/invalid/set_hash_unhashable/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    h: int = s.__hash__()


if __name__ == "__main__":
    run_case()
